# tome-lang

./: eslint.config.js  gemini.md  index.ts  package-lock.json  package.json  test.tome  test2.tome  tome-language-spec.md  tsconfig.json
cli/: format.ts  index.ts
data/: ast.json  testProgram.ts  tokens.json
dsl/: analyzer.test.ts  analyzer.ts  constants.ts  lexer.test.ts  lexer.ts  parser.test.ts  parser.ts  treeSitterAdapter.ts  types.ts
editor/: README.md  codemirrorTSAdapter.ts  index.html  main.tsx  style.css  tomeEditorExample.ts  vite.config.ts
lezer-tome/: astAdapter.ts  index.ts  tokens.ts  tome-parser.terms.ts  tome-parser.ts  tome.grammar
lsp/: analyzer.test.ts  analyzer.ts  client.ts  logger.ts  types.ts  worker.ts
tree-sitter-tome/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  pyproject.toml  setup.py  tome-v2.dylib  tome.dylib  tree-sitter-tome.wasm  tree-sitter.json
tree-sitter-tome/bindings/c/: tree-sitter-tome.pc.in
tree-sitter-tome/bindings/c/tree_sitter/: tree-sitter-tome.h
tree-sitter-tome/bindings/go/: binding.go  binding_test.go
tree-sitter-tome/bindings/node/: binding.cc  index.js
tree-sitter-tome/bindings/python/tests/: test_binding.py
tree-sitter-tome/bindings/python/tree_sitter_tome/: __init__.py  binding.c
tree-sitter-tome/bindings/rust/: build.rs  lib.rs
tree-sitter-tome/bindings/swift/TreeSitterTomeTests/: TreeSitterTomeTests.swift
tree-sitter-tome/queries/tome/: highlights.scm  indents.scm
tree-sitter-tome/src/: grammar.json  node-types.json  parser.c  scanner.c
(+45 files in other folders)
